--- a/app/views/solicitor/about-case.html
+++ b/app/views/solicitor/about-case.html
@@ -20,17 +20,17 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="opponents-other-parties">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">About your case</h2>
+          <h2 class="govuk-heading-xl">About the case</h2>
 
           <form class="form" action="statement-of-case" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
-                <p class="govuk-body">Does the matter relate to the clients capacity or any other action under the Mental Health Act 2007 or Mental Capacity Act 2005? </p>
+                <p class="govuk-body">Does the matter relate to the client's capacity or any other action under the Mental Health Act 2007 or Mental Capacity Act 2005? </p>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="capacity-type-1" name="capacity-type" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="capacity-type-1">
@@ -48,7 +48,7 @@
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
-                <p class="govuk-body">Do the actual or likey costs of this case, for all clients represented, exceed £25,000? (The sum of the actual or estimated costs of all your clients in these proceedings) </p>
+                <p class="govuk-body">Do the actual or likely costs of this case, for all clients represented, exceed £25,000? (The sum of the actual or estimated costs of all your clients in these proceedings) </p>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="application-type-1" name="application-type" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="application-type-1">
