--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -27,7 +27,7 @@
 
           <h2 class="govuk-heading-xl">Your client said they do not receive any benefits in kind</h2>
 
-          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer. Is this correct?</p>
+          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer.</p>
 
           <form action="/solicitor/check-answers" method="post">
 
@@ -36,11 +36,11 @@
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bikYes" name="bik" type="radio" value="yes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="bikYes">Yes</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="bikYes">Yes, this is correct</label>
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bikNo" name="bik" type="radio" value="no">
-                  <label class="govuk-c-label govuk-c-radios__label" for="bikNo">No</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="bikNo">No, change the answer</label>
                 </div>
               </fieldset>
             </div>
