--- a/app/views/solicitor/benefits-result.html
+++ b/app/views/solicitor/benefits-result.html
@@ -25,31 +25,25 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <p></p>
-          <h2>
-            Is your client receiving benefits?
-          </h2>
 
         <br>
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00"> 
           <div class="govuk-c-panel__body">
-            John Doe
+            John Doe <br>will have to complete a
             </div>  
             <br>
           <h2 class="govuk-c-panel__title">
-            is not receiving benefits
+            financial means assessment
           </h2>
-          <div class="govuk-c-panel__body">
-            according to the DWP
-          </div> 
+
         </div>
 
         <h3>What to do next</h3>
         <br>
         <p class="govuk-body">
-        Your client will need to complete a financial assessment. 
-        </p>
+        Your client is not receiving any benefits that qualify for legal aid. They will have to complete a financial means assessment.</p>
         <p class="govuk-body">
-        They can complete the assessment online from home or a preferred location.
+        Your client can complete the financial assessment online from home or another location.
         </p>
 
           <form class="form" action="online-banking" method="post">
