--- a/app/views/solicitor/declared-shares.html
+++ b/app/views/solicitor/declared-shares.html
@@ -38,7 +38,7 @@
               <tr class="govuk-c-table__row">
                 <td class="govuk-c-table__cell">Stocks and shares</td>
                 <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1000</td>
-                <td class="govuk-c-table__cell"><a href='#'>Amend</a></td>
+                <td class="govuk-c-table__cell"><a href='#'>Change</a></td>
               </tr>
             </tbody>
           </table>
