--- a/app/views/solicitor/document-upload-stocks.html
+++ b/app/views/solicitor/document-upload-stocks.html
@@ -20,12 +20,13 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="document-upload">Back</a>
+    <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Document upload for stocks and shares
+            Upload evidence for stocks and shares
           </h2>
 
           </br>
