--- a/app/views/solicitor/exceptional-funding.html
+++ b/app/views/solicitor/exceptional-funding.html
@@ -20,11 +20,11 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="legal-help">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Exceptional Funding</h2>
+          <h2 class="govuk-heading-xl">Are you applying for exceptional funding?</h2>
 
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
               How important are the issues in this case for your client?
@@ -56,7 +56,7 @@
             </details>
 
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
-              Please provide any additional information that is relevent to the determination
+              Please provide any additional information that is relevant to the determination
             </label>
             <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
             </div>
