--- a/app/views/solicitor/paid-cash.html
+++ b/app/views/solicitor/paid-cash.html
@@ -27,7 +27,7 @@
 
           <h2 class="govuk-heading-xl">Your client said all income was paid into the bank</h2>
 
-          <p class="govuk-body">Your client does not have any income paid in cash. Is this correct?</p>
+          <p class="govuk-body">Your client does not have any income paid in cash.</p>
 
           <form action="/solicitor/benefits-kind" method="post">
 
@@ -36,11 +36,11 @@
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="cashYes" name="cashPay" type="radio" value="yes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes, this is correct</label>
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="cashNo" name="cashPay" type="radio" value="no">
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No, change the answer</label>
                 </div>
               </fieldset>
             </div>
