--- a/app/views/solicitor/property.html
+++ b/app/views/solicitor/property.html
@@ -25,7 +25,7 @@
           Your client said they do not own their home
         </h1>
 
-        <p class="govuk-body">Your client does not have a financial interest in a property. Is this correct?</p>
+        <p class="govuk-body">Your client does not have a financial interest in a property.</p>
 
         <form class="form" action="declared-shares" method="post">
 
@@ -34,13 +34,13 @@
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
-                Yes
+                Yes, this is correct
               </label>
               </div>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
                 <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
-                No
+                No, change the answer
               </label>
               </div>
             </fieldset>
