--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -36,7 +36,7 @@
 
           </br>
           <h2 class="govuk-heading-m">
-            Selected income
+            Income (selected by your client)
           </h2>
 
           <div>
@@ -57,7 +57,7 @@
                   <td class="govuk-c-table__cell">BACS Child maintenance</td>
                   <td class="govuk-c-table__cell">Child maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
-                  <td class="govuk-c-table__cell">Benefits, rent and financial support</td>
+                  <td class="govuk-c-table__cell">Benefits, property and financial support</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
