--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -37,7 +37,7 @@
 
           </br>
           <h2 class="govuk-heading-m">
-            Selected outgoings
+          Outgoings (selected by your client)
           </h2>
 
           <div>
@@ -75,7 +75,7 @@
             <br>
 
             <h2 class="govuk-heading-m">
-              Other outgoings (not selected)
+              Other outgoing transactions (not selected)
             </h2>
 
             <div>
