--- a/app/views/solicitor/statement-of-case.html
+++ b/app/views/solicitor/statement-of-case.html
@@ -20,22 +20,22 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="attempts-settle">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Statement of Case</h2>
+          <h2 class="govuk-heading-xl">Statement of case</h2>
 
           <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
-             <p class="govuk-body" style = "color: #b10e1e; font-weight:800;">You will need to include what has happened so far, personal information including the parties involved,
-             their relationship and/or children. Please provide details of these and explain why these current proceedings are neccessary</p>
+             <p class="govuk-body" style = "color: #b10e1e; font-weight:800;">Provide details of what has happened so far, personal information including the parties involved, and
+             their relationship and/or children. Explain why these current proceedings are neccessary.</p>
           </div>
-
           <br>
+             <p class="govuk-body">What is the client's position? What are they seeking and why? You must provide sufficent information to satisfy
+              the regulations applicable to the case including the benefit likely to be obtained.</p>
 
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
-              What is the clients position and what are they seeking and why? You must provide sufficent information to satisfy
-              the regulations applicable to the case including the benefit likey to be obtained
+              Enter statement of case
             </label>
             <textarea id="more-detail" name="more-detail" rows="20" class="govuk-c-textarea"></textarea>
             </div>
@@ -58,17 +58,6 @@
           <summary class="govuk-c-details__summary">
             <span class="govuk-c-details__summary-text">
               Emergency applications
-            </span>
-          </summary>
-          <div class="govuk-c-details__text">
-            Placeholder text
-          </div>
-        </details>
-
-        <details class="govuk-c-details">
-          <summary class="govuk-c-details__summary">
-            <span class="govuk-c-details__summary-text">
-              What if I run out of space?
             </span>
           </summary>
           <div class="govuk-c-details__text">
