--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -23,12 +23,9 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1>Provisional result</h1>
+        <h1>If your case is eligible, you will have to pay:</h1>
         <br>
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-          <div class="govuk-c-panel__body">
-            You will have to make a contribution of
-          </div>
           <br>
           <h2 class="govuk-c-panel__title">
             £255.00 a month
