--- a/app/views/solicitor/application-task-list.html
+++ b/app/views/solicitor/application-task-list.html
@@ -452,9 +452,7 @@
 
         <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
           <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
-            <li>Until all the sections are complete, you will not be able to submit this application.</li>
-            </br>
-            <li>You can complete the sections in whichever order suits you.</li>
+            <li>You must complete each section before you can submit the application.</li>
           </ul>
         </div>
 
