--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -447,7 +447,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Complete the following application sections
+          Apply for legal aid
         </h2>
 
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
