--- a/app/views/solicitor/check-answers.html
+++ b/app/views/solicitor/check-answers.html
@@ -50,7 +50,7 @@
                   </td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Benefits, rent and financial support</th>
+                  <th class="govuk-c-table__header" scope="row">Benefits, property and financial support</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
