--- a/app/views/solicitor/court-details.html
+++ b/app/views/solicitor/court-details.html
@@ -25,7 +25,7 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Is the funding for a case that has already gone to court?</h2>
+          <h2 class="govuk-heading-xl">Do you want funding for a case that has already gone to court?</h2>
 
           <form class="form" action="opponents-other-parties" method="post">
 
