--- a/app/views/solicitor/document-upload-type.html
+++ b/app/views/solicitor/document-upload-type.html
@@ -20,14 +20,14 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="declared-evidence">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Document upload for stocks and shares</h2>
+          <h2 class="govuk-heading-xl">Upload evidence for stocks and shares</h2>
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="select-1">
-            Select from the drop down what kind of evidence you are submitting
+            Select type of evidence
           </label>
             <select class="govuk-c-select" id="select-1" name="select-1">
             <option value="1">Stock certificate</option>
