--- a/app/views/solicitor/document-upload.html
+++ b/app/views/solicitor/document-upload.html
@@ -20,11 +20,12 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="document-upload-type">Back</a>
+    <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Document upload for stocks and shares</h2>
+          <h2 class="govuk-heading-xl">Upload evidence for stocks and shares</h2>
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="file-upload-1">
                     <b>Select a file to upload as evidence</b>
