--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -21,12 +21,22 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffcc00">
+        <h2>Provisional result</h2>
+        <br>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+          <div class="govuk-c-panel__body">
+            Your client will have to make a contribution of
+          </div>
+          <br>
           <h2 class="govuk-c-panel__title">
-            Means assessment result
-          </br>
-        </br>
-          Provisional: Pass
+            £255.00 a month
+          </h2>
+          <div class="govuk-c-panel__body">
+            for 6 months<br><br> or a single payment of
+          </div>
+          <br>
+          <h2 class="govuk-c-panel__title">
+            £1275.00
           </h2>
         </div>
 
