--- a/app/views/solicitor/opponents-other-parties.html
+++ b/app/views/solicitor/opponents-other-parties.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
-              Please confirm why your client requires seperate representation
+              Enter reasons why your client needs separate representation
             </label>
             <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
             <p class="govuk-body">Please ensure the reason why seperate representation is required is dealt with in respect of all parties. </p>
