--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -45,7 +45,6 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;width:100px">Date</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Description</th>
-                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Explanation</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Amount</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Type</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;"></th>
@@ -53,17 +52,15 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">06 Jan 18</td>
-                  <td class="govuk-c-table__cell">BACS Child maintenance</td>
-                  <td class="govuk-c-table__cell">Child maintenance</td>
+                  <td class="govuk-c-table__cell">02 APR 2018</td>
+                  <td class="govuk-c-table__cell">CHILD MAINTENANCE BACS</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
                   <td class="govuk-c-table__cell">Benefits, property and financial support</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">18 Jan 18</td>
-                  <td class="govuk-c-table__cell">BACS transfer Tyreworld</td>
-                  <td class="govuk-c-table__cell">Salary/wage</td>
+                  <td class="govuk-c-table__cell">02 APR 2018</td>
+                  <td class="govuk-c-table__cell">TYREWORLD BACS</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1800.00</td>
                   <td class="govuk-c-table__cell">Salary and pensions</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
@@ -89,39 +86,39 @@
                 </thead>
                 <tbody class="govuk-c-table__body">
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">06 Jan 18</td>
-                    <td class="govuk-c-table__cell">Payment from ebay</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£250.00</td>
+                    <td class="govuk-c-table__cell">18 APR 2018</td>
+                    <td class="govuk-c-table__cell">CASH DEPOSIT</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£420.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">18 Jan 18</td>
-                    <td class="govuk-c-table__cell">Cash for tickets</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£25.00</td>
+                    <td class="govuk-c-table__cell">19 APR 2018</td>
+                    <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£30.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">23 Jan 18</td>
-                    <td class="govuk-c-table__cell">Refund from hairdressers</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£16.00</td>
+                    <td class="govuk-c-table__cell">05 APR 2018</td>
+                    <td class="govuk-c-table__cell">PAYPAL WWW.EBAY.COM</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£27.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">26 Jan 18</td>
-                    <td class="govuk-c-table__cell">Interest charge</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.23</td>
+                    <td class="govuk-c-table__cell">03 APR 2018</td>
+                    <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£15.86</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">03 Feb 18</td>
-                    <td class="govuk-c-table__cell">Transfer from Dave</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£20.00</td>
+                    <td class="govuk-c-table__cell">30 APR 2018</td>
+                    <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£10.00</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                   <tr class="govuk-c-table__row">
-                    <td class="govuk-c-table__cell">06 Feb 18</td>
-                    <td class="govuk-c-table__cell">Transfer from Owen</td>
-                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£12.00</td>
+                    <td class="govuk-c-table__cell">29 APR 2018</td>
+                    <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+                    <td class="govuk-c-table__cell govuk-c-table__header--numeric">£7.50</td>
                     <td class="govuk-c-table__cell"><a href="">Add as income</a></td>
                   </tr>
                 </tbody>
