Minor copy updates

--- a/app/views/citizen-truelayer/capital-bonds-amount.html
+++ b/app/views/citizen-truelayer/capital-bonds-amount.html
@@ -33,7 +33,7 @@
         <form class="form" action="stocks-shares" method="post">
 
           <div class="govuk-o-form-group">
-           <br> £ <input class="govuk-c-input govuk-!-width-two-thirds" id="cb-amount" name="cb-amount" placeholder="0.00" type="number">
+           £ <input class="govuk-c-input govuk-!-width-two-thirds" id="cb-amount" name="cb-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
