--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -23,7 +23,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1>If your case is eligible, you will have to pay:</h1>
+        <h1>If your case qualifies for legal aid, you will have to pay:</h1>
         <br>
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
           <br>
