--- a/app/views/citizen-truelayer/national-savings-amount.html
+++ b/app/views/citizen-truelayer/national-savings-amount.html
@@ -30,7 +30,7 @@
 
           </label>
           <div class="govuk-o-form-group">
-            <br>£ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
+      £ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
