--- a/app/views/citizen-truelayer/other-savings-amount.html
+++ b/app/views/citizen-truelayer/other-savings-amount.html
@@ -31,7 +31,7 @@
         <form class="form" action="other-savings" method="post">
 
           <div class="govuk-o-form-group">
-          <br>  £ <input class="govuk-c-input govuk-!-width-two-thirds" id="os-amount" name="os-amount" placeholder="0.00" type="number">
+          £ <input class="govuk-c-input govuk-!-width-two-thirds" id="os-amount" name="os-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
