--- a/app/views/citizen-truelayer/premium-bonds-amount.html
+++ b/app/views/citizen-truelayer/premium-bonds-amount.html
@@ -32,7 +32,7 @@
         <form class="form" action="capital-bonds" method="post">
 
           <div class="govuk-o-form-group">
-           <br> £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
+           £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
 
