--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -495,7 +495,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Evidence submission
+                        Submit evidence
                 </a>
                 <a class="govuk-link" href="">
                   <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
