--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -27,7 +27,7 @@
 
           <h2 class="govuk-heading-xl">Your client said they do not receive any benefits in kind</h2>
 
-          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer.</p>
+          <p class="govuk-body">Your client does not get things like a company car, travel card or health insurance from their employer.</p>
 
           <form action="/solicitor/check-answers" method="post">
 
