--- a/app/views/solicitor/declared-evidence-with-stocks.html
+++ b/app/views/solicitor/declared-evidence-with-stocks.html
@@ -447,7 +447,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-        Your client needs to provide evidence for the following        </h2>
+        Your client has provided all evidence </h2>
 
         <ol class="task-list">
           <li>
