--- a/app/views/solicitor/opponents-other-parties.html
+++ b/app/views/solicitor/opponents-other-parties.html
@@ -20,7 +20,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="court-details">Back</a>
-
+      <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -49,7 +49,7 @@
               Enter reasons why your client needs separate representation
             </label>
             <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
-            <p class="govuk-body">Please ensure the reason why seperate representation is required is dealt with in respect of all parties. </p>
+            <p class="govuk-body">Please ensure the reason why separate representation is required is dealt with in respect of all parties. </p>
             </div>
 
             <input class="govuk-c-button" type="submit" value="Continue">
