--- a/app/views/solicitor/other-evidence-stocks.html
+++ b/app/views/solicitor/other-evidence-stocks.html
@@ -26,7 +26,7 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            Does your client have other evidence to submit for stocks and shares?
+            Does your client need to upload more evidence for stocks and shares?
           </h2>
 
           <form class="form" action="declared-evidence-with-stocks" method="post">
