--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -492,7 +492,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Evidence submission
+                        Submit evidence
                 </a>
                 <a class="govuk-link" href="">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
