--- a/app/views/solicitor/case-dashboard-complete.html
+++ b/app/views/solicitor/case-dashboard-complete.html
@@ -415,10 +415,10 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="application-tasklist-with-means-merits-evidence.html">Back</a>
-
+      <p class="govuk-body"></p>
       <div>
 
-        <h2 class="govuk-heading-xl">Continue an application</h2>
+        <h2 class="govuk-heading-xl">Your legal aid applications</h2>
 
         <p class="govuk-body">
           When a client has completed the financial means assessment, the case will be marked as 'Ready to progress'.
