--- a/app/views/solicitor/review-income.html
+++ b/app/views/solicitor/review-income.html
@@ -30,7 +30,7 @@
 
           <div class="govuk-c-error-summary govuk-o-grid__item--two-thirds" aria-labelledby="error-summary-title" role="alert">
             <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
-              <li>Make sure to review what your client has declared and amend as necessary.</li>
+              <li>Review your client's declarations and amend as necessary.</li>
             </ul>
           </div>
 
