--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -24,20 +24,13 @@
         <h2>Provisional result</h2>
         <br>
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-          <div class="govuk-c-panel__body">
-            Your client will have to make a contribution of
-          </div>
           <br>
           <h2 class="govuk-c-panel__title">
-            £255.00 a month
+            £103.25 a month
           </h2>
           <div class="govuk-c-panel__body">
-            for 6 months<br><br> or a single payment of
+            for the lifetime of the case
           </div>
-          <br>
-          <h2 class="govuk-c-panel__title">
-            £1275.00
-          </h2>
         </div>
 
         <h3 class="govuk-heading">
